RESOLVED FIXED21900
wx port doesn't draw text caret
https://bugs.webkit.org/show_bug.cgi?id=21900
Summary wx port doesn't draw text caret
Kevin Watters
Reported 2008-10-27 11:30:55 PDT
Active and focus states get out of sync in the wx port, resulting in the text control caret not being drawn.
Attachments
fix caret drawing in the wx port (1.30 KB, patch)
2008-10-27 11:31 PDT, Kevin Watters
kevino: review+
Kevin Watters
Comment 1 2008-10-27 11:31:25 PDT
Created attachment 24688 [details] fix caret drawing in the wx port
Kevin Ollivier
Comment 2 2008-10-27 14:47:21 PDT
Comment on attachment 24688 [details] fix caret drawing in the wx port > diff --git a/WebKit/wx/ChangeLog b/WebKit/wx/ChangeLog > index 3d105b4..1a6e911 100644 > --- a/WebKit/wx/ChangeLog > +++ b/WebKit/wx/ChangeLog > @@ -1,3 +1,14 @@ > +2008-10-27 Kevin Watters <kevinwatters@gmail.com> > + > + Reviewed by NOBODY (OOPS!). > + > + Update the active state as well as the focused state as both need to be true > + for the caret to be drawn. > + > + * WebView.cpp: > + (wxWebView::OnSetFocus): > + (wxWebView::OnKillFocus): > + > 2008-10-25 Kevin Ollivier <kevino@theolliviers.com> > > wx build fix. > diff --git a/WebKit/wx/WebView.cpp b/WebKit/wx/WebView.cpp > index 0c4cb66..546518f 100644 > --- a/WebKit/wx/WebView.cpp > +++ b/WebKit/wx/WebView.cpp > @@ -564,8 +564,10 @@ void wxWebView::OnSetFocus(wxFocusEvent& event) > if (m_mainFrame) > frame = m_mainFrame->GetFrame(); > > - if (frame) > + if (frame) { > + m_impl->page->focusController()->setActive(true); > frame->selection()->setFocused(true); > + } > > event.Skip(); > } > @@ -576,9 +578,10 @@ void wxWebView::OnKillFocus(wxFocusEvent& event) > if (m_mainFrame) > frame = m_mainFrame->GetFrame(); > > - if (frame) > + if (frame) { > + m_impl->page->focusController()->setActive(false); > frame->selection()->setFocused(false); > - > + } > event.Skip(); > } >
Kevin Ollivier
Comment 3 2008-10-27 15:17:52 PDT
Landed in r37906, thanks!
Note You need to log in before you can comment on or make changes to this bug.