Reviewed by Kevin Ollivier.

Update the active state as well as the focused state as both need to be true
for the caret to be drawn.
        
https://bugs.webkit.org/show_bug.cgi?id=21900


git-svn-id: svn://svn.chromium.org/blink/trunk@37906 bbb929c8-8fbe-4397-9dbb-9b2b20218538