third_party/WebKit/WebKit/wx/WebView.cpp
@@ -565,8 +565,10 @@ void wxWebView::OnSetFocus(wxFocusEvent& event)
     if (m_mainFrame)
         frame = m_mainFrame->GetFrame();
         
-    if (frame)
+    if (frame) {
+        m_impl->page->focusController()->setActive(true);
         frame->selection()->setFocused(true);
+    }
 
     event.Skip();
 }
@@ -577,9 +579,10 @@ void wxWebView::OnKillFocus(wxFocusEvent& event)
     if (m_mainFrame)
         frame = m_mainFrame->GetFrame();
         
-    if (frame)
+    if (frame) {
+        m_impl->page->focusController()->setActive(false);
         frame->selection()->setFocused(false);
-
+    }
     event.Skip();
 }
 
